...
const val PREF_SHOW_PAGE_TURN_FAB = "showPageTurnFab"
const val PREF_SHOW_PAGE_TURN_GUIDE = "showPageTurnGuide"
const val DEFAULT_SHOW_PAGE_TURN_GUIDE = false
const val PREF_SHOW_CONTENT_END_MARKER = "showContentEndMarker"
const val DEFAULT_SHOW_CONTENT_END_MARKER = false
const val PREF_VOLUME_KEY_PAGE_TURN = "volumeKeyPageTurn"
const val APPEARANCE_SETTINGS_SCROLL_TAG = "appearanceSettings.scroll"
const val APPEARANCE_SETTINGS_START_DESTINATION_TAG = "appearanceSettings.startDestination"
const val APPEARANCE_SETTINGS_ANSWER_DOUBLE_TAP_TAG = "appearanceSettings.answerDoubleTap"
const val APPEARANCE_SETTINGS_ANSWER_SWITCH_SENSITIVITY_TAG = "appearanceSettings.answerSwitchSensitivity"
const val APPEARANCE_SETTINGS_USE_WEBVIEW_TAG = "appearanceSettings.useWebView"
const val APPEARANCE_SETTINGS_TIQIAN_MARKDOWN_TAG = "appearanceSettings.tiqianMarkdown"
const val APPEARANCE_SETTINGS_WEBVIEW_FONT_TAG = "appearanceSettings.webViewFont"
const val APPEARANCE_SETTINGS_WEBVIEW_OPTIONS_TAG = "appearanceSettings.webViewOptions"
const val APPEARANCE_SETTINGS_BOTTOM_BAR_SECTION_KEY = "appearanceSettings.bottomBarSection"
...
